# cryptotrader

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml  provenance.yml
config/: settings.toml
cryptotrader/: candles.py  config.py  executor.py  health.py  main.py  models.py  statistics.py  trader.py
cryptotrader/db/: database.py
cryptotrader/exchange/: kraken_rest.py  kraken_ws.py
cryptotrader/strategy/: _indicators.py  base.py  bollinger.py  ema.py  registry.py  threshold.py  trend_pullback.py
cryptotrader/tui/: app.py  balance_panel.py  health_panel.py  price_panel.py  stats_panel.py  trade_log_panel.py  weekly_summary_panel.py
deploy/: cryptotrader.service  deploy-local.sh  deploy.sh  gitlab-runner-values.yaml  inventory.ini  playbook.yml
docs/: gitlab-ci.md  pi-filesystem-encryption.md  tui.md
scripts/: deposit.py  migrate_sqlite_to_duckdb.py  report.py  stats.py
tests/: conftest.py  test_bollinger_strategy.py  test_candles.py  test_config.py  test_ema_strategy.py  test_executor.py  test_indicators.py  test_kraken_rest.py  test_statistics.py  test_strategy.py  test_trader.py  test_trend_pullback_strategy.py
