[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptotrader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "aiohttp>=3.10",
    "textual>=0.89",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
    "ruff>=0.6",
]

[project.scripts]
cryptotrader = "cryptotrader.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cryptotrader*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
